Change til version 0.99.4:
+ minor updates based on check warnings

Change in version 0.99.1:
+ error fixed in build check

Change in version 0.99.0:
+ submitted to Bioconductor