@@ -1,14 +1,13 @@
 Package: muSpaData
-Version: 0.99.4
+Version: 0.99.5
 Title: Multi-sample multi-group spatially resolved transcriptomic data
 Description: Data package containing a multi-sample multi-group spatial dataset in SpatialExperiment Bioconductor object format.
 Authors@R: person("Peiying", "Cai", email = "peiying.cai@uzh.ch", role = c("aut", "cre"), comment = c(ORCID = "0009-0001-9229-2244"))
 URL: https://github.com/peicai/muSpaData
 BugReports: https://github.com/peicai/muSpaData/issues
 License: MIT + file LICENSE
-Depends: R (>= 4.5.0), ExperimentHub, SpatialExperiment
-Imports: utils
-Suggests: BiocStyle, DropletUtils, knitr, rmarkdown, R.utils
+Depends: R (>= 4.5.0), ExperimentHub
+Suggests: SpatialExperiment, ggplot2, BiocStyle, knitr, rmarkdown, R.utils
 biocViews: ExperimentHub, ExperimentData, ExpressionData, SpatialData, SingleCellData
 VignetteBuilder: knitr
 RoxygenNote: 7.3.2
