@@ -1,3 +1,7 @@
+Change in version 0.99.5:
++ custom functions to load datasets
++ update based on reviewer's suggestions
+
 Change til version 0.99.4:
 + minor updates based on check warnings
 
